# global_planning_for_lunar_rover

./: CMakeLists.txt  MGA_config.h  b_box.h  convert_img_to_map.h  coordinate.cpp  coordinate.h  global_map.cpp  global_map.h  main.cpp  map_width_header.h  mga_node.cpp  mga_node.h  node.cpp  node.h  planning_map.cpp  planning_map.h  rover_parameters.h  test_csv.csv  utility.cpp  utility.h
Python_Viz/: check_map.py  convert_npy_to_csv.py  mv5_M1121075381R-DEM.tif  mv5_M1121075381R_5M_ortho-DEM.tif  open_tiff.m  read_csv.m  trajectory.csv  waypoints.csv
